Fixing paragraph background on mobile

--- a/Styles.css
+++ b/Styles.css
@@ -165,7 +165,7 @@ body.mobile .dropdown {
     margin-top: 20px;
 }
 body.mobile .background {
-    padding: 20px;
+    padding: 10px;
     margin: 20px;
     text-align: left;
     width: 90%;
